src/test/ui/confuse-field-and-method/private-field.stderr
error[E0599]: no method named `dog_age` found for type `animal::Dog` in the current scope
  --> $DIR/private-field.rs:16:23
   |
LL |     pub struct Dog {
   |     -------------- method `dog_age` not found for this
...
LL |     let dog_age = dog.dog_age();
   |                       ^^^^^^^ private field, not a method

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
